# vec2text-experiments

./: .pre-commit-config.yaml  initial_codebook.npy  pyproject.toml
experiment_scripts/: plot_centroids.py
experiment_scripts/logits/: evaluate_baseline.py  evaluate_inversion.py  run_baselines_jailbreak.py
experiment_scripts/misc/: compute_bits.py  convert_embeddings_to_binary_files.py  create_embeddings_dataset.py  dump_embeddings.py  dump_embeddings_binary.py  emb_analysis.py  evaluate_retrieval_under_noise.py  sentence_closest_words.py  sentence_pair_similarity.py  upload_model.py
tests/: test_api.py  test_corrector_trainer.py  test_inversion_model_vq_integration.py  test_inversion_trainer.py  test_inversion_trainer_bow.py  test_inversion_trainer_na.py  test_sequence_level_beam_generation.py  test_vector_quantizer.py
vec2text/: aliases.py  analyze_utils.py  api.py  collator.py  data_helpers.py  experiments.py  initial_codebook.npy  latest_centroids.py  precompute_train_hypotheses.py  run.py  run_args.py  run_train.sh  tokenize_data.py
vec2text/models/: config.py  corrector_encoder.py  corrector_encoder_from_logits.py  inversion.py  inversion_bow.py  inversion_decoder.py  inversion_from_logits.py  inversion_from_logits_emb.py  inversion_na.py  inversion_unet.py  model_utils.py  vector_quantizer.py
vec2text/trainers/: base.py  corrector.py  inversion.py  inversion_from_logits.py  inversion_na.py
vec2text/trainers_baseline/: fewshot_inversion_trainer.py  jailbreak_prompt_trainer.py
vec2text/utils/: init_codebook.py  utils.py
