[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vec2text"
version = "0.0.13"
description = "convert embedding vectors back to text"
authors = [
    {name = "Jack Morris", email = "jxm3@cornell.edu"}
]
dependencies = [
    "accelerate",
    "bert_score",
    "datasets",
    "einops",
    "evaluate",
    "ipykernel>=6.29.5",
    "openai",
    "optimum",
    "pre-commit",
    "rouge_score",
    "sacrebleu",
    "sentence_transformers",
    "tenacity",
    "tokenizers",
    "torchmetrics>=1.6.2",
    "tqdm",
    "transformers",
    "wandb>=0.19.8",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.setuptools]
packages = {find = {}}

[tool.ruff]
line-length = 100


[tool.mypy]
strict = false
implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
implicit_reexport = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
